--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.0",
+    "image-search-google": "^1.3.0",
+    "nerds": "^1.3.6",
     "nodemon": "^2.0.2"
   }
 }
