--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -15,6 +15,7 @@
     "hbs": "^4.1.0",
     "image-search-google": "^1.3.0",
     "nerds": "^1.3.6",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "vara": "^1.2.0"
   }
 }
